agrego contenido a la pestaña de información

--- a/config/FilmHub/templates/FilmHub/about.html
+++ b/config/FilmHub/templates/FilmHub/about.html
@@ -1,2 +1,35 @@
 {% extends 'FilmHub/main.html'%}
 about page
+{% block content %}
+<div style='text-align: center; margin-top: 25px'>
+    <h2 style='display: inline'>¡Bienvenido a <h2 style='color: white; background-color: black; display: inline;'>Film</h2><h2 style='color: black; background-color: yellow; display: inline;'>Hub</h2><h2 style='display: inline;'>, la base de datos más grande de películas a nivel global!</h2>
+</div>
+
+<div style='margin-top: 25px; margin-left: 10px'>
+    <h3 style='width: 50%;'><b><u>Que somos?</u></b></h3>
+</div>
+
+<div style='margin-top: 25px; margin-left: 10px'>
+    <h3>FilmHub es una base de datos a nivel global de recopilación y exibición de películas, de todas las edades, géneros, idiomas, sabores, colores...</h3>
+</div>
+
+
+
+<div style='margin-top: 50px; margin-left: 10px'>
+    <h3 style='width: 50%;'><b><u>Cómo comienzo a ver películas?</u></b></h3>
+</div>
+
+<div style='margin-top: 25px; margin-left: 10px'>
+    <h3>Para ver una película, basta con buscar entre las miles de opciones que ofrecemos, disponibles en el catálogo de la página de inicio.</h3>
+</div>
+
+
+
+<div style='margin-top: 50px; margin-left: 10px'>
+    <h3 style='width: 50%;'><b><u>Cómo funcionamos?</u></b></h3>
+</div>
+
+<div style='margin-top: 25px; margin-left: 10px'>
+    <h3>El servicio que ofrecemos es gratis, sin embargo, aceptamos donaciones en nuestro Patreon para mantener el sitio en orden.</h3>
+</div>
+{% endblock %}
