--- a/config/FilmHub/templates/FilmHub/home.html
+++ b/config/FilmHub/templates/FilmHub/home.html
@@ -3,16 +3,40 @@
 {% block content %}
 
 <div class="row justify-content-center">
-
-    <div class="col-md">
+    {% for pelicula in peliculas%}
+    <div class="col-md-auto">
         <div class="card card-body">
-            
+            <div class="row justify-content-center">
+            <h3>{{pelicula.nombre}}</h3>
+            </div>
+            <div class="row justify-content-center">
+            <img width="320" height="432" src='{{pelicula.portada.url}}'>
+            </div>
         </div>
     </div>
+    {% endfor %}
 
 </div>
 <div class="row justify-content-center">
    
+</div>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if peliculas.has_previous %}
+            <a href="?page=1" class="btn btn-primary">&laquo; first</a>
+            <a href="?page={{ peliculas.previous_page_number }}" class="btn btn-primary">previous</a>
+        {% endif %}
+
+        <span class="btn btn-primary">
+            Page {{ peliculas.number }} of {{ peliculas.paginator.num_pages }}.
+        </span>
+
+        {% if peliculas.has_next %}
+            <a  href="?page={{ peliculas.next_page_number }}" class="btn btn-primary" >next</a>
+            <a  href="?page={{ peliculas.paginator.num_pages }}" class="btn btn-primary">last &raquo;</a>
+        {% endif %}
+    </span>
 </div>
 
 
