toques finales al template home y agrego peliculas

--- a/config/FilmHub/templates/FilmHub/about.html
+++ b/config/FilmHub/templates/FilmHub/about.html
@@ -2,7 +2,7 @@
 about page
 {% block content %}
 <div style='text-align: center; margin-top: 25px'>
-    <h2 style='display: inline'>¡Bienvenido a <h2 style='color: white; background-color: black; display: inline;'>Film</h2><h2 style='color: black; background-color: yellow; display: inline;'>Hub</h2><h2 style='display: inline;'>, la base de datos más grande de películas a nivel global!</h2>
+    <h2 style='display: inline'>¡Bienvenido a <h2 style='color: white; background-color: black; display: inline;'>Film</h2><h2 style='color: black; background-color: yellow; display: inline;'>Hub</h2><h2 style='display: inline;'>!</h2>
 </div>
 
 <div style='margin-top: 25px; margin-left: 10px'>
@@ -10,7 +10,7 @@ about page
 </div>
 
 <div style='margin-top: 25px; margin-left: 10px'>
-    <h3>FilmHub es una base de datos a nivel global de recopilación y exibición de películas, de todas las edades, géneros, idiomas, sabores, colores...</h3>
+    <h3></h3>
 </div>
 
 
