--- a/config/FilmHub/templates/FilmHub/home.html
+++ b/config/FilmHub/templates/FilmHub/home.html
@@ -5,7 +5,7 @@
 <div class="row justify-content-center">
     {% for pelicula in peliculas%}
     <div class="col-md-auto">
-        <div class="card card-body">
+        <div class="card card-body"; style='margin-bottom:30px'>
             <div class="row justify-content-center">
             <h3>{{pelicula.nombre}}</h3>
             </div>
