cambio en el about

--- a/config/FilmHub/templates/FilmHub/about.html
+++ b/config/FilmHub/templates/FilmHub/about.html
@@ -10,26 +10,6 @@ about page
 </div>
 
 <div style='margin-top: 25px; margin-left: 10px'>
-    <h3></h3>
-</div>
-
-
-
-<div style='margin-top: 50px; margin-left: 10px'>
-    <h3 style='width: 50%;'><b><u>Cómo comienzo a ver películas?</u></b></h3>
-</div>
-
-<div style='margin-top: 25px; margin-left: 10px'>
-    <h3>Para ver una película, basta con buscar entre las miles de opciones que ofrecemos, disponibles en el catálogo de la página de inicio.</h3>
-</div>
-
-
-
-<div style='margin-top: 50px; margin-left: 10px'>
-    <h3 style='width: 50%;'><b><u>Cómo funcionamos?</u></b></h3>
-</div>
-
-<div style='margin-top: 25px; margin-left: 10px'>
-    <h3>El servicio que ofrecemos es gratis, sin embargo, aceptamos donaciones en nuestro Patreon para mantener el sitio en orden.</h3>
+    <h3>FilmHub es una franquicia de cines a nivel global, que se especializa en la presentación de películas en alta calidad y con salas con las comodidades que se merece.</h3>
 </div>
 {% endblock %}
