--- a/config/FilmHub/templates/FilmHub/funciones.html
+++ b/config/FilmHub/templates/FilmHub/funciones.html
@@ -1,3 +1,50 @@
-
 {% extends 'FilmHub/main.html' %}
-Funciones
+{% load static %}
+{% block content %}
+<div class="container h-100">
+    <div class="row justify-content-left">
+        
+        <div class="col-md-auto">
+            <div class="card card-body">
+                <div class="row justify-content-center">
+                    <a href="{% url 'funciones' pelicula.id %}" class="ml-2"><h3>{{pelicula.nombre}}</h3></a>
+                </div>
+                <div class="row justify-content-center">
+                 <div class="col-md-auto">
+                    <img width="320" height="432" src='{{pelicula.portada.url}}'>
+                    </div>
+                    <div class="col-md-auto">
+                    <p>{{pelicula.descripcion}}</p> 
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        <div class="col-md-auto">
+            <div class="card card-body">
+                <div class="row justify-content-center">
+                    <h3>Funciones</h3>
+
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md">
+                        Horario
+                    </div>
+                    <div class="col-md">
+                        Sala
+                    </div>
+                </div>
+                {% for funcion in funciones%}
+                    <div class="row justify-content-center">
+                        <div class="col-md">
+                            {{funcion.horario}}
+                        </div>
+                        <div class="col-md">
+                            {{funcion.sala}}
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
