--- a/config/FilmHub/templates/FilmHub/funciones.html
+++ b/config/FilmHub/templates/FilmHub/funciones.html
@@ -7,13 +7,13 @@
         <div class="col-md-auto">
             <div class="card card-body">
                 <div class="row justify-content-center">
-                    <a href="{% url 'funciones' pelicula.id %}" class="ml-2"><h3>{{pelicula.nombre}}</h3></a>
+                    <a href="{% url 'funciones' pelicula.id %}" class="ml-2" style="text-align: left"><h3>{{pelicula.nombre}}</h3></a>
                 </div>
                 <div class="row justify-content-center">
                  <div class="col-md-auto">
                     <img width="320" height="432" src='{{pelicula.portada.url}}'>
                     </div>
-                    <div class="col-md-auto">
+                    <div class="col-md-auto"; style="width:500px; background-color:lightgray">
                     <p>{{pelicula.descripcion}}</p> 
                     </div>
                 </div>
@@ -48,3 +48,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
