--- a/config/FilmHub/templates/FilmHub/funciones.html
+++ b/config/FilmHub/templates/FilmHub/funciones.html
@@ -2,16 +2,16 @@
 {% load static %}
 {% block content %}
 <div class="container h-100">
-    <div class="row justify-content-left">
+    <div class="row justify-content-around">
         
-        <div class="col-md-auto">
+        <div class="col-sm-auto">
             <div class="card card-body">
                 <div class="row justify-content-center">
                     <a href="{% url 'funciones' pelicula.id %}" class="ml-2" style="text-align: left"><h3>{{pelicula.nombre}}</h3></a>
                 </div>
                 <div class="row justify-content-center">
                  <div class="col-md-auto">
-                    <img width="320" height="432" src='{{pelicula.portada.url}}'>
+                    <img width="212" height="280" src='{{pelicula.portada.url}}'>
                     </div>
                     <div class="col-md-auto"; style="width:500px; background-color:lightgray">
                     <p>{{pelicula.descripcion}}</p> 
@@ -20,7 +20,7 @@
                 
             </div>
         </div>
-        <div class="col-md-auto">
+        <div class="col-sm-auto">
             <div class="card card-body">
                 <div class="row justify-content-center">
                     <h3>Funciones</h3>
@@ -35,6 +35,7 @@
                     </div>
                 </div>
                 {% for funcion in funciones%}
+                
                     <div class="row justify-content-center">
                         <div class="col-md">
                             {{funcion.horario}}
