--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -1,5 +1,7 @@
 {% extends 'FilmHub/main.html'%}
 about page
 {% block content %}
-
+{% for boleto in boletos  %}
+{% boleto %}
+{% endfor %}
 {% endblock %}
