--- a/config/FilmHub/templates/FilmHub/buy_ticket.html
+++ b/config/FilmHub/templates/FilmHub/buy_ticket.html
@@ -3,23 +3,6 @@
 {% block content %}
 <div class="container h-100">
     <div class="row justify-content-around">
-        
-        <div class="col-sm-auto">
-            <div class="card card-body">
-                <div class="row justify-content-center">
-                    <a href="{% url 'funciones' pelicula.id %}" class="ml-2" style="text-align: left"><h3>{{pelicula.nombre}}</h3></a>
-                </div>
-                <div class="row justify-content-center">
-                 <div class="col-md-auto">
-                    <img width="212" height="280" src='{{pelicula.portada.url}}'>
-                    </div>
-                    <div class="col-md-auto"; style="width:500px; background-color:lightgray">
-                    <p>{{pelicula.descripcion}}</p> 
-                    </div>
-                </div>
-                
-            </div>
-        </div>
         <div class="col-sm-auto">
             <div class="card card-body">
                 <div class="row justify-content-center">
@@ -38,7 +21,7 @@
                     </div>
                     
                 </div>
-                {% for funcion in funciones%}
+                
                     
                     <div class="row justify-content-center">
                         <div class="col-md">
@@ -48,12 +31,12 @@
                             {{funcion.sala}}
                         </div>
                         <div class="col-md">
-                            <a class="nav-link" href="{% url 'buy_ticket' funcion.pk  %}">BUY ${{funcion.pelicula.precio_base}}</a>
+                            ${{funcion.pelicula.precio_base}}
                         </div>
 
                     </div>
                     
-                {% endfor %}
+                
             </div>
         </div>
     </div>
