--- a/config/FilmHub/templates/FilmHub/buy_ticket.html
+++ b/config/FilmHub/templates/FilmHub/buy_ticket.html
@@ -6,7 +6,7 @@
         <div class="col-sm-auto">
             <div class="card card-body">
                 <div class="row justify-content-center">
-                    <h3>Funciones</h3>
+                    <h3>Funcion</h3>
 
                 </div>
                 <div class="row justify-content-center">
@@ -20,23 +20,85 @@
                         PRECIO
                     </div>
                     
+                </div>  
+                <div class="row justify-content-center">
+                    <div class="col-md">
+                        {{funcion.horario}}
+                    </div>
+                    <div class="col-md">
+                        {{funcion.sala}}
+                    </div>
+                    <div class="col-md">
+                        ${{funcion.pelicula.precio_base}}
+                    </div>
+
                 </div>
-                
                     
-                    <div class="row justify-content-center">
-                        <div class="col-md">
-                            {{funcion.horario}}
+                
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-around">
+        <div class="col">
+            <div class="card card-body">
+                <form method="GET" action="" id="asientosForm">
+                {% csrf_token %}
+                
+                <fieldset>
+                    <legend>Elija los asientos</legend>
+                    <br>
+                    <h1  id="precio">total a pagar:$</h1>
+                    <br>
+                    {% for fila in filas %}
+                    <div class="row justify-content-around">
+                        <div class="col-auto">
+                            <h1>{{fila}}:  </h1>
                         </div>
-                        <div class="col-md">
-                            {{funcion.sala}}
-                        </div>
-                        <div class="col-md">
-                            ${{funcion.pelicula.precio_base}}
-                        </div>
+                        
+                        {% for asiento in asientos %}
+                            {% if asiento.fila == fila %}
+                                {% if asiento.reservado %}
+                                    <div class="col" style="background-image:url('{% static '/img/butacareservada.png' %}');background-size: 100% 100%;text-align: center;color:white;margin:2px"><input onclick="calcularPrecio()"  type="checkbox" name="{{asiento.fila}}{{asiento.butaca}}" value="{{ asiento.pk}}" disabled>{{ asiento.butaca}}</div>
+                                    
+                                {% else %}
+                                    <div class="col" style="background-image:url('{% static '/img/butaca.png' %}');background-size: 100% 100%;text-align: center;color:white;margin:2px"><input onclick="calcularPrecio()"  type="checkbox" id="asientos" name="{{asiento.fila}}{{asiento.butaca}}" value="{{ asiento.pk}}" >{{ asiento.butaca}}</div>
+                                {% endif %}
+                            {% endif %}
+                            
+                            
+
+                        {% endfor %}
+                        
+                    
 
                     </div>
-                    
+                    {% endfor %}
+                </fieldset>
                 
+                <br>
+                <input class="btn login_btn" type="submit" value="Siguiente">
+                </form>
+                <script>
+                    function calcularPrecio() {
+                        
+                   
+                        var asientos = document.getElementsByTagName('input');
+                        var precio = 0;
+                            
+
+                        for (var i=0, len=asientos.length; i<len; i++) {
+                            if (asientos[i].getAttribute('type') == 'checkbox') {
+                                if ( asientos[i].checked ) {
+                                    precio += {{funcion.pelicula.precio_base}};
+                                    
+                                }
+                            }
+                        }
+                        document.getElementById("precio").innerHTML = "total a pagar:$" +precio;
+                        
+                    }
+                    
+                </script>
             </div>
         </div>
     </div>
