--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -4,29 +4,34 @@
 <div class="container h-100">
     <div class="row justify-content-around">
         
-        <div class="col-sm-auto">
+        
             
                 
                 {% for factura in facturas  %}
+                <div class="col-sm-auto">
                 
-                <div class="row justify-content-center">
+                <div style="margin:10px 0px 10px 0px" class="row justify-content-center">
                     <div style="color:white;background-color:black;border-top-right-radius: 0px;border-bottom-right-radius: 0px;border-style: none dashed none none;border-color: #fef107ff;border-width: 3px;" class="card card-body">
                         <div class="col-md-auto">
                             <div class="row justify-content-center">
                                 <h5>SALA</h5>
                             </div>
                             <div class="row justify-content-center">
-                                <h1><b>{{ factura.boleto.asiento.sala.numero }}</b></h1>
+                                <h1><b>{{ factura.boleto.funcion.sala.numero }}</b></h1>
                             </div>
                             <div class="row justify-content-center">
-                                <h3>ASIENTO <b>{{ factura.boleto.asiento.fila }}{{ factura.boleto.asiento.butaca }}</b></h3>
+                                <h3>ASIENTOS </h3>
+                            
+                            </div>
+                            <div class="row justify-content-center">
+                                <h6><b> {% for asiento in factura.boleto.asientos.all %}{{ asiento.fila}}{{ asiento.butaca}}, {%endfor%}</b> </h6>
                             </div>
                         </div>
                     </div>
                     <div style="color:black;background-color:#fef107ff;border-top-left-radius: 0px;border-bottom-left-radius: 0px;border-style: none none none dashed;border-color: black;border-width: 3px;" class="card card-body">
                         <div class="col-md-auto">
                             <div class="row justify-content-left">
-                                <h3><b>SALA {{ factura.boleto.asiento.sala.numero }}</b></h3>
+                                <h3><b>SALA {{ factura.boleto.funcion.sala.numero }}</b></h3>
                             </div>
                             <div class="row justify-content-left">
                                 {{ factura.boleto.funcion.horario }}
@@ -34,14 +39,18 @@
                             <div class="row justify-content-left">
                                 {{ factura.boleto.funcion.pelicula }}
                             </div>
+                            <div class="row justify-content-left">
+                                ${{ factura.precio_final }}
+                            </div>
                             
                         </div>
                     </div>
                 </div>
+                </div>
                 {% endfor %}
                 
             
-        </div>
+        
 
     </div>
 </div>
