--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -31,7 +31,7 @@
                     <div style="color:black;background-color:#fef107ff;border-top-left-radius: 0px;border-bottom-left-radius: 0px;border-style: none none none dashed;border-color: black;border-width: 3px;" class="card card-body">
                         <div class="col-md-auto">
                             <div class="row justify-content-left">
-                                <h3><b>SALA {{ factura.boleto.funcion.sala.numero }}</b></h3>
+                                <h3><b>PELICULA </b></h3>
                             </div>
                             <div class="row justify-content-left">
                                 {{ factura.boleto.funcion.horario }}
@@ -42,6 +42,14 @@
                             <div class="row justify-content-left">
                                 ${{ factura.precio_final }}
                             </div>
+                            <div class="row justify-content-left">
+                                <h3><b>ALIMENTOS</b></h3>
+                                
+                            </div>
+                            <div class="row justify-content-left">
+                                {{ factura.combo_comida }}
+                            </div>
+                            
                             
                         </div>
                     </div>
