--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -49,6 +49,13 @@
                             <div class="row justify-content-left">
                                 {{ factura.combo_comida }}
                             </div>
+                            <div class="row justify-content-left">
+                                <h3><b>PRECIO TOTAL</b></h3>
+                                
+                            </div>
+                            <div class="row justify-content-left">
+                                ${{ factura.precio_total }}
+                            </div>
                             
                             
                         </div>
