--- a/config/FilmHub/templates/FilmHub/buy_food.html
+++ b/config/FilmHub/templates/FilmHub/buy_food.html
@@ -100,6 +100,17 @@ about page
                             </div>
         
                         </div>
+                        <script>
+                            function changeVisibility(){
+                                foodForm.comida.disabled = true;
+                                foodForm.cant_comida.disabled = true;
+                                foodForm.bebida.disabled = true;
+                                foodForm.cant_bebida.disabled = true;
+
+                            }
+
+                            
+                        </script>
                     </form>
 
                 </div>
