--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -26,12 +26,13 @@
                             <div class="row justify-content-center">
                                 <h6><b> {% for asiento in factura.boleto.asientos.all %}{{ asiento.fila}}{{ asiento.butaca}}, {%endfor%}</b> </h6>
                             </div>
+                            
                         </div>
                     </div>
                     <div style="color:black;background-color:#fef107ff;border-top-left-radius: 0px;border-bottom-left-radius: 0px;border-style: none none none dashed;border-color: black;border-width: 3px;" class="card card-body">
                         <div class="col-md-auto">
                             <div class="row justify-content-left">
-                                <h3><b>PELICULA </b></h3>
+                                <h3><b>FUNCION </b></h3>
                             </div>
                             <div class="row justify-content-left">
                                 {{ factura.boleto.funcion.horario }}
@@ -39,9 +40,7 @@
                             <div class="row justify-content-left">
                                 {{ factura.boleto.funcion.pelicula }}
                             </div>
-                            <div class="row justify-content-left">
-                                ${{ factura.precio_final }}
-                            </div>
+                            
                             <div class="row justify-content-left">
                                 <h3><b>ALIMENTOS</b></h3>
                                 
@@ -54,7 +53,7 @@
                                 
                             </div>
                             <div class="row justify-content-left">
-                                ${{ factura.precio_total }}
+                                {{ factura }}
                             </div>
                             
                             
