--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -26,6 +26,10 @@
                             <div class="row justify-content-center">
                                 <h6><b> {% for asiento in factura.boleto.asientos.all %}{{ asiento.fila}}{{ asiento.butaca}}, {%endfor%}</b> </h6>
                             </div>
+                            <br>
+                            <div class="row justify-content-center">
+                                <h6><a style="color:yellow" href="{% url 'ticket_info' factura.pk  %}">MÁS INFORMACIÓN</a></h6>
+                            </div>
                             
                         </div>
                     </div>
