--- a/config/FilmHub/templates/FilmHub/ticketinfo.html
+++ b/config/FilmHub/templates/FilmHub/ticketinfo.html
@@ -57,6 +57,12 @@
                 <div style="color:white; text-align:center; margin-top:40px">
                     <a><h4>${{factura.precio_final}}</h4></a>
                 </div>
+                <div class="row justify-content-left" style="color:white;">
+                    <h4>Comprado</h4>
+                </div>
+                <div class="row justify-content-left" style="color:white;">
+                    <a><h4>Fecha y Hora: {{factura.created}} </h4></a>
+                </div>
                 
             </div>
         </div>
