--- a/config/FilmHub/templates/FilmHub/my_tickets.html
+++ b/config/FilmHub/templates/FilmHub/my_tickets.html
@@ -3,94 +3,100 @@
 
 <div class="container h-100">
     <div class="row justify-content-around">
+        {% for message in messages%}
+        <div class="alert alert-success" role="alert"><h2>!{{message}}!</h2></div>
+            
+        {% endfor %}
+    </div>
+    <div class="row justify-content-around">
     
         
             
                 
                 {% for factura in facturas  %}
                 <div class="col-sm-auto">
-                
-                <div style="margin:10px 0px 10px 0px" class="row justify-content-center">
-                    <div style="color:white;background-color:black;border-top-right-radius: 0px;border-bottom-right-radius: 0px;border-style: none dashed none none;border-color: #fef107ff;border-width: 3px;" class="card card-body">
-                        <div class="col-md-auto">
-                            <div class="row justify-content-center">
-                                <h5>SALA</h5>
-                            </div>
-                            <div class="row justify-content-center">
-                                <h1><b>{{ factura.boleto.funcion.sala.numero }}</b></h1>
-                            </div>
-                            <div class="row justify-content-center">
-                                <h3>ASIENTOS </h3>
-                            
-                            </div>
-                            <div class="row justify-content-center">
-                                <h6><b> {% for asiento in factura.boleto.asientos.all %}{{ asiento.fila}}{{ asiento.butaca}}, {%endfor%}</b> </h6>
-                            </div>
-                            <br>
-                            <div class="row justify-content-center">
-                                <h6><a style="color:yellow" href="{% url 'ticket_info' factura.pk  %}">MÁS INFORMACIÓN</a></h6>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <style>
                     
-                    .background:after {
-                        position: absolute;
-                        content: " ";
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        z-index: 0;
-                        background-color: rgba(255, 255, 0, 0.7);
-                    }
-                    .content{
-                        
-                        content: " ";
-                        
-                        width: 100%;
-                        height: 100%;
-                        z-index: 1;
-                    }
-                    
-                    </style>
-                    
-                    <div  style="background: url('{{factura.boleto.funcion.pelicula.portada.url}}') ;background-size: 100% 100%;color:black;border-top-left-radius: 0px;border-bottom-left-radius: 0px;border-style: none none none dashed;border-color: black;border-width: 3px;" class="card card-body background">
-                        <div class="col-md-auto content">
-                            <div class="row justify-content-left">
-                                <h3><b>FUNCION </b></h3>
-                            </div>
-                            <div class="row justify-content-left">
-                                {{ factura.boleto.funcion.horario }}
-                            </div>
-                            <div class="row justify-content-left">
-                                {{ factura.boleto.funcion.pelicula }}
-                            </div>
-                            
-                            <div class="row justify-content-left">
-                                <h3><b>ALIMENTOS</b></h3>
+                    <div style="margin:10px 0px 10px 0px" class="row justify-content-center">
+                        <div style="color:white;background-color:black;border-top-right-radius: 0px;border-bottom-right-radius: 0px;border-style: none dashed none none;border-color: #fef107ff;border-width: 3px;" class="card card-body">
+                            <div class="col-md-auto">
+                                <div class="row justify-content-center">
+                                    <h5>SALA</h5>
+                                </div>
+                                <div class="row justify-content-center">
+                                    <h1><b>{{ factura.boleto.funcion.sala.numero }}</b></h1>
+                                </div>
+                                <div class="row justify-content-center">
+                                    <h3>ASIENTOS </h3>
+                                
+                                </div>
+                                <div class="row justify-content-center">
+                                    <h6><b> {% for asiento in factura.boleto.asientos.all %}{{ asiento.fila}}{{ asiento.butaca}}, {%endfor%}</b> </h6>
+                                </div>
+                                <br>
+                                <div class="row justify-content-center">
+                                    <h6><a style="color:yellow" href="{% url 'ticket_info' factura.pk  %}">MÁS INFORMACIÓN</a></h6>
+                                </div>
                                 
                             </div>
-                            <div class="row justify-content-left">
-                                {{ factura.combo_comida }}
-                            </div>
-                            <div class="row justify-content-left">
-                                <h3><b>PRECIO TOTAL</b></h3>
+                        </div>
+                        <style>
+                        
+                        .background:after {
+                            position: absolute;
+                            content: " ";
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            z-index: 0;
+                            background-color: rgba(255, 255, 0, 0.7);
+                        }
+                        .content{
+                            
+                            content: " ";
+                            
+                            width: 100%;
+                            height: 100%;
+                            z-index: 1;
+                        }
+                        
+                        </style>
+                        
+                        <div  style="background: url('{{factura.boleto.funcion.pelicula.portada.url}}') ;background-size: 100% 100%;color:black;border-top-left-radius: 0px;border-bottom-left-radius: 0px;border-style: none none none dashed;border-color: black;border-width: 3px;" class="card card-body background">
+                            <div class="col-md-auto content">
+                                <div class="row justify-content-left">
+                                    <h3><b>FUNCION </b></h3>
+                                </div>
+                                <div class="row justify-content-left">
+                                    {{ factura.boleto.funcion.horario }}
+                                </div>
+                                <div class="row justify-content-left">
+                                    {{ factura.boleto.funcion.pelicula }}
+                                </div>
+                                
+                                <div class="row justify-content-left">
+                                    <h3><b>ALIMENTOS</b></h3>
+                                    
+                                </div>
+                                <div class="row justify-content-left">
+                                    {{ factura.combo_comida }}
+                                </div>
+                                <div class="row justify-content-left">
+                                    <h3><b>PRECIO TOTAL</b></h3>
+                                    
+                                </div>
+                                <div class="row justify-content-left">
+                                    {{ factura }}
+                                </div>
+                                <div class="row justify-content-left" >
+                                    <h6>Comprado: {{factura.created}}</h6>
+                                </div>
+                                
+                                
                                 
                             </div>
-                            <div class="row justify-content-left">
-                                {{ factura }}
-                            </div>
-                            <div class="row justify-content-left" >
-                                <h6>Comprado: {{factura.created}}</h6>
-                            </div>
-                            
-                            
-                            
                         </div>
                     </div>
-                </div>
                 </div>
                 {% endfor %}
                 
