--- a/config/FilmHub/templates/FilmHub/profile.html
+++ b/config/FilmHub/templates/FilmHub/profile.html
@@ -2,7 +2,14 @@
 
 {% block content %}
 <div class="container h-100">
+    <div class="row justify-content-center">
+        {% for message in messages%}
+        <div class="alert alert-info" role="alert"><h2>!{{message}}!</h2></div>
+            
+        {% endfor %}
+    </div>
     <div class="d-flex justify-content-center h-100">
+        
         <div class="user_card">
             <div class="d-flex justify-content-center">
 
