--- a/config/FilmHub/templates/FilmHub/home.html
+++ b/config/FilmHub/templates/FilmHub/home.html
@@ -2,6 +2,23 @@
 {% load static %}
 {% block content %}
 
+<div class="container" style="margin-top: 10px; margin-bottom: 10px">
+    <div class="row">
+        <div class="col-md-12 search">
+            <form method="get">
+                <div id="custom_search_input">
+                    <div class="input-group col-md-12">
+                        <input type="text" class="form-control" value="{{buscar}}" placeholder="Buscar películas por título o descripción." name="buscar">
+                        <span class="input-group-list">
+                            <button type="submit" class="boton btn-success" style="height: 100%;">Buscar</button>
+                        </span>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="row justify-content-center">
     {% for pelicula in peliculas%}
     <div class="col-md-auto">
